[package]
name = "file_downloader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
structopt = "0.3.13"
indicatif = "0.17.0-beta.1"
futures-util = "0.3.17"
regex = "1"
async-std = "1.10.0"